hero media keys on mobile arent the same as chrome dev, trying a fix

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -85,6 +85,7 @@ a:link{
     }
 
     .header-logo{
+        padding-left: 2rem;
         height: 90px;
         width: 320px;
     }
