--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -69,7 +69,7 @@
 @media only screen and (max-width : 425px){
     .hero{
         width: 100vw;
-        height: 153vh;
+        height: 200vh;
     }
 
     .hero-img{
